# duskphantom

./: .gitignore  .gitmodules  1.c  1.ll  1.s  1.s.d  1.sy  Cargo.toml  \  ]  build.rs  flake.nix  readme.md  rust-toolchain.toml  shell.nix
.direnv/: flake-profile-1-link  flake-profile-2-link
.gitea/workflows/: build_and_test.yaml
benches/: parse_expr.rs  reg_set.rs
crates/clang-front-back/: Cargo.toml
crates/clang-front-back/src/: clang_backend.rs  clang_frontend.rs  lib.rs
crates/duskphantom-backend/: Cargo.toml
crates/duskphantom-backend/benches/: reg_set.rs
crates/duskphantom-backend/src/: errors.rs  lib.rs
crates/duskphantom-backend/src/from/: mod.rs
crates/duskphantom-backend/src/from/from_llvm/: build_glob_var.rs  build_op.rs  builder.rs  macros.rs  mod.rs
crates/duskphantom-backend/src/from/from_llvm/build_inst/: control.rs  mod.rs  normal.rs
crates/duskphantom-backend/src/from/from_self/: builder.rs  macros.rs  mod.rs  operand.rs  utils.rs  vars.rs
crates/duskphantom-backend/src/from/from_self/instruction/: call.rs  mod.rs  normal.rs
crates/duskphantom-backend/src/irs/: macros.rs  mod.rs  operand.rs  prog.rs  stack_slot.rs
crates/duskphantom-backend/src/irs/checker/: riscv.rs
crates/duskphantom-backend/src/irs/instruction/: convert.rs  data_move.rs  reg_def_use.rs  test.rs
crates/duskphantom-backend/src/optimize/: block.rs  caller_callee.rs  inst_combine.rs  post_inst_split.rs  pre_inst_split.rs
crates/duskphantom-backend/src/optimize/analysis/: cfg.rs  def_then_def.rs  interval.rs  line.rs  reg_live.rs
crates/duskphantom-backend/src/optimize/reg_alloc/: graph_color.rs  ilp.rs  mod.rs
crates/duskphantom-backend/tests/: mod.rs  test_gen_asm.rs  test_phisicalize.rs
crates/duskphantom-backend/tests/from/: from_llvm.rs  from_self.rs  mod.rs
crates/duskphantom-backend/tests/test_optimize/: reg_alloc.rs  simplify_cfg.rs  simplify_term.rs
crates/duskphantom-frontend/: Cargo.toml
crates/duskphantom-frontend/benches/: parse_expr.rs
crates/duskphantom-frontend/src/: lib.rs
crates/duskphantom-frontend/src/ir/: decl.rs  expr.rs  misc.rs  typed.rs
crates/duskphantom-frontend/src/parse/: decl.rs  macros.rs  stmt.rs
crates/duskphantom-frontend/src/transform/: constant_fold.rs  mod.rs  reshape_array.rs
crates/duskphantom-frontend/tests/: mod.rs  parse.rs
crates/duskphantom-graph/: Cargo.toml
crates/duskphantom-graph/src/: lib.rs
crates/duskphantom-middle/: Cargo.toml
crates/duskphantom-middle/src/: config.rs  errors.rs  lib.rs
crates/duskphantom-middle/src/analysis/: alias_analysis.rs  call_graph.rs  dominator_tree.rs  effect_analysis.rs  loop_tools.rs  memory_ssa.rs  mod.rs  reachability.rs  simple_gvn.rs
crates/duskphantom-middle/src/ir/: constant.rs  function.rs  global_variable.rs  macros.rs  mod.rs  module.rs  operand.rs  value_type.rs
crates/duskphantom-middle/src/ir/instruction/: head.rs  memory_op_inst.rs  misc_inst.rs  mod.rs  unary_inst.rs
crates/duskphantom-middle/src/irgen/: function_kit.rs  gen_binary.rs  gen_const.rs  gen_expr.rs  gen_global_decl.rs  gen_impl.rs  gen_inner_decl.rs  gen_library_function.rs  gen_stmt.rs  gen_type.rs  gen_unary.rs  mod.rs  program_kit.rs  value.rs
crates/duskphantom-middle/src/transform/: block_fuse.rs  constant_fold.rs  dead_code_elim.rs  func_inline.rs  inst_combine.rs  ldce.rs  licm.rs  load_elim.rs  load_store_elim.rs  loop_depth.rs  loop_optimization.rs  loop_simplify.rs  make_parallel.rs  mem2reg.rs  redundance_elim.rs  sink_code.rs  store_elim.rs  ultimate_pass.rs
crates/duskphantom-middle/tests/: gep.rs  irgen.rs
crates/duskphantom-middle/tests/analysis/: effect_analysis.rs  memory_ssa.rs
crates/duskphantom-middle/tests/transform/: block_fuse.rs  constant_fold.rs  dead_code_elim.rs  func_inline.rs  load_elim.rs  loop_optimization.rs  make_parallel.rs  mem2reg.rs  mod.rs  redundance_elim.rs  store_elim.rs  symbolic_eval.rs
crates/duskphantom-utils/: Cargo.toml
crates/duskphantom-utils/src/: diff.rs  lib.rs  log.rs  traverse.rs  vec_util.rs
crates/duskphantom-utils/tests/: mod.rs  test_objptr.rs  test_paral_counter.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/reg-set-fuzz/: Cargo.toml
crates/reg-set-fuzz/fuzz/: Cargo.toml
crates/reg-set-fuzz/fuzz/fuzz_targets/: reg_set.rs  single.rs
crates/reg-set-fuzz/src/: lib.rs  main.rs  single.rs
docs/: clang前端.md  前端IR设计.md  后端IR设计.md  后端汇编生成.md  开发者文档.md  项目依赖的工具.md
docs/后端汇编生成优化案例/: from_self.md  phisicalize.md  使用align3而不是2.md  全局字符串生成.md  寄存器分配.md  寄存器约定.md  常用标签.md
lib/: sylib.ll
log/: .gitignore
scripts/: Dockerfile  build_local.sh  init.sh  task.sh  task_opt.sh  test.sh  test_all.sh  说明.txt
scripts/unit_test_updater/: Cargo.toml
scripts/unit_test_updater/src/: file_editor.rs  lib.rs  test_result.rs
src/: args.rs  backend.rs  clang_backend.rs  clang_frontend.rs  cli.rs  config.rs  errors.rs  frontend.rs  lib.rs  main.rs  main_clang.rs  main_clang_llc.rs  main_clang_self.rs  main_self_llc.rs  middle.rs
src/backend/: block.rs  clang_gen.rs  func.rs  gen.rs  gen_asm.rs  inst.rs  libthrd.rs  mod.rs  optimize.rs  phisicalize.rs  prog.rs  type.rs  var.rs
src/backend/from/: common.rs  from_llvm.rs  from_self.rs  mod.rs
src/backend/irs/: block.rs  checker.rs  func.rs  inst.rs  macros.rs  mod.rs  module.rs  operand.rs  prog.rs  reg_set.rs  stack_slot.rs  var.rs
src/backend/optimize/: analyze.rs  block.rs  block_reorder.rs  caller_callee.rs  inst_combine.rs  inst_split.rs  mod.rs  post_inst_split.rs  pre_inst_split.rs  pre_ra_inst_split.rs  stack.rs  (+2 more)
src/clang_frontend/: mod.rs
src/frontend/: decl.rs  expr.rs  lexer.rs  macros.rs  misc.rs  mod.rs  oprt.rs  parser.rs  program.rs  stmt.rs  typed.rs
src/middle/: mod.rs  tool.rs
src/utils/: diff.rs  error.rs  frame_map.rs  log.rs  maybe_owned.rs  mem.rs  mod.rs  paral_counter.rs  traverse.rs  vec_util.rs
tests/: f32_f64.rs  mod.rs  test_objptr.rs  test_paral_counter.rs
tests/backend/: gen_asm.rs  mod.rs  phisicalize.rs
tests/frontend/: parse.rs
tests/middle/: .irgen.rs.pending-snap  gep.rs  irgen.rs  mod.rs
(+233 files in other folders)
