[package]
name = "clang-front-back"
version = "0.1.0"
edition = "2021"


[dependencies]
duskphantom-utils = { workspace = true, features = ["log_enabled"] }
rayon = { workspace = true }
llvm-ir = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
