[package]
name = "clang-front-back"
version = "0.0.1"
description = "Frontend and Backend Based on Clang"
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true


[dependencies]
duskphantom-utils = { workspace = true, features = ["log_enabled"] }
rayon = { workspace = true }
llvm-ir = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
