[package]
name = "duskphantom-utils"
version = "0.0.1"
edition = "2021"
description = "Utilities for DuskPhantom"
license = "MIT OR Apache-2.0"

[lib]
name = "duskphantom_utils"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
diff = "0.1.13"
typed-arena = "2.0.2"

[features]
default = []
log_enabled = []
