[package]
name = "reg-set-fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
duskphantom = { workspace = true }
libfuzzer-sys = { version = "0.4.7", features = ["arbitrary-derive"] }

[profile.release]
lto = false
codegen-units = 12 # 提交参赛代码的时候该行设置为1
strip = false
opt-level = 2
